config.toml update

--- a/themes/hugo-coder/config.toml
+++ b/themes/hugo-coder/config.toml
@@ -15,9 +15,17 @@ noClasses = false
 author = "Ozan Demir"
 # license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
 description = "Datenzauberer und IT-Ethusiast"
-keywords = "blog,projekte,personal"
+keywords = "blog,projekte,persönlich,IT"
 info = ["Projektmanager", "Datenzauberer"]
 avatarURL = "images/avatar.jpg"
+footercontent = "Meine Reise in die Welt der Informationstechnologie begann im zarten Alter von 11 Jahren, als ein Commodore Amiga 500 mein Tor zu den unendlichen Möglichkeiten öffnete. 
+In den Weiten der Bundesliga Manager-Datenbanken fand ich meine ersten digitalen Abenteuer. 
+Der Umstieg auf meinen ersten Windows-Rechner mit Windows XP im Alter von 13 Jahren markierte den Beginn meiner Selbstentdeckung in der IT-Welt.
+Mit einer unstillbaren Neugier und einer Passion für Zahlen, Performance, Trends und Analysen machte ich mich daran, mir selbst vieles beizubringen. 
+Das Gestalten von Webseiten, insbesondere im Kontext von Fussball Manager Online-Seiten mit H&H WebSoccer und WoltLab, wurde zu meinem Spielplatz für Kreativität und technische Finesse. Das Schreiben von Skripten, die komplexe Aufgaben vereinfachen, wurde zu meiner zweiten Natur.
+Nach der TU Berlin habe ich meine Leidenschaft zum Beruf gemacht. Heute arbeite ich als Projektmanager/-koordinator im pulsierenden Umfeld der Informationstechnologie. Meine Reise hat mich durch verschiedene Stationen geführt, und ich habe dabei wertvolle Erfahrungen gesammelt, die mich stets vorwärts treiben. Denn in der IT gibt es nur eine Konstante: den stetigen Wandel. 
+Und darauf freue ich mich, Tag für Tag, in dieser faszinierenden Welt der Innovation und Technologie."
+
 #gravatar = "john.doe@example.com"
 dateFormat = "January 2, 2006"
 since = 2019
@@ -149,7 +157,7 @@ url = "https://twitter.com/johndoe/"
 name = "LinkedIn"
 icon = "fa-brands fa-linkedin fa-2x"
 weight = 4
-url = "https://www.linkedin.com/in/johndoe/"
+url = ""
 
 [[params.social]]
 name = "Medium"
@@ -165,26 +173,26 @@ url = "https://myhugosite.com/index.xml"
 rel = "alternate"
 type = "application/rss+xml"
 
-[languages.en]
-languageName = ":uk:"
+[languages.de]
+languageName = ":de:"
 
-[[languages.en.menu.main]]
-name = "About"
+[[languages.de.menu.main]]
+name = "über mich"
 weight = 1
 url = "about/"
 
-[[languages.en.menu.main]]
-name = "Blog"
+[[languages.de.menu.main]]
+name = "blog"
 weight = 2
 url = "posts/"
 
-[[languages.en.menu.main]]
-name = "Projects"
+[[languages.de.menu.main]]
+name = "projekte"
 weight = 3
 url = "projects/"
 
-[[languages.en.menu.main]]
-name = "Contact me"
+[[languages.de.menu.main]]
+name = "kontakt"
 weight = 5
 url = "contact/"
 
