--- a/themes/hugo-coder/config.toml
+++ b/themes/hugo-coder/config.toml
@@ -173,35 +173,35 @@ url = "https://myhugosite.com/index.xml"
 rel = "alternate"
 type = "application/rss+xml"
 
-[languages.de]
-languageName = ":de:"
+[languages.en]
+languageName = ":uk:"
 
-[[languages.de.menu.main]]
+[[languages.en.menu.main]]
 name = "über mich"
 weight = 1
 url = "about/"
 
-[[languages.de.menu.main]]
+[[languages.en.menu.main]]
 name = "blog"
 weight = 2
 url = "posts/"
 
-[[languages.de.menu.main]]
+[[languages.en.menu.main]]
 name = "projekte"
 weight = 3
 url = "projects/"
 
-[[languages.de.menu.main]]
+[[languages.en.menu.main]]
 name = "kontakt"
 weight = 5
 url = "contact/"
 
 [languages.pt-br]
 languageName = ":brazil:"
-title = "João Ninguém"
+title = "Ozan Demir"
 
 [languages.pt-br.params]
-author = "João Ninguém"
+author = "Ozan Demir"
 info = "Full Stack DevOps e Mágico"
 description = "Sítio pessoal de João Ninguém"
 keywords = "blog,desenvolvedor,pessoal"
