--- a/themes/hugo-coder/config.toml
+++ b/themes/hugo-coder/config.toml
@@ -1,8 +1,8 @@
 baseURL = "http://www.example.com"
 title = "ozandemir"
 theme = "hugo-coder"
-languageCode = "de"
-defaultContentLanguage = "de"
+languageCode = "de-DE"
+defaultContentLanguage = "de-DE"
 paginate = 6
 enableEmoji = true
 # Enable Disqus comments
