--- a/themes/hugo-coder/config.toml
+++ b/themes/hugo-coder/config.toml
@@ -65,6 +65,10 @@ style = "github-dark"
   weight = 1
   url  = "posts/"
 [[menu.main]]
-  name = "About"
+  name = "Kontakt"
   weight = 2
   url = "about/"
+[[menu.main]]  
+  name = "Projekte"
+  weight = 3
+  url = "projects/"
