--- a/themes/hugo-coder/config.toml
+++ b/themes/hugo-coder/config.toml
@@ -18,14 +18,12 @@ style = "github-dark"
   info = "IT-Enthusiast, Datenzauberer"
   description = "Ozan's personal website"
   keywords = "entwickler,persönlich,projekt,it"
-[params.avatar]
-  avatarurl = "images/avatar.png"
+  avatarurl = "images/avatar.jpg"
   #gravatar = "ozan.demir@example.com"
 
-  [params.favicon]
-  faviconSVG = "/images/favicon.svg"
-  favicon_32 = "/images/favicon-32x32.png"
-  favicon_16 = "/images/favicon-16x16.png"
+  faviconSVG = "/img/favicon.svg"
+  favicon_32 = "/img/favicon-32x32.png"
+  favicon_16 = "/img/favicon-16x16.png"
 
   since = 2023
 
