--- a/themes/hugo-coder/config.toml
+++ b/themes/hugo-coder/config.toml
@@ -2,7 +2,6 @@ baseURL = 'https://example.org/'
 languageCode = 'de-DE'
 title = 'Ozan Demir'
 theme = 'hugo-coder' 
-
 defaultContentLanguage = 'de'
 defaultContentLanguageInSubdir = true
 
@@ -12,13 +11,14 @@ disqusShortname = "yourdiscussshortname"
 
 [markup.highlight]
 style = "github-dark"
+noClasses = false
 
 [params]
   author = "Ozan Demir"
   info = "IT-Enthusiast, Datenzauberer"
   description = "Ozan's personal website"
   keywords = "entwickler,persönlich,projekt,it"
-  avatarurl = "images/avatar.jpg"
+  avatarurl = "images/avatar.png"
   #gravatar = "ozan.demir@example.com"
 
   faviconSVG = "/img/favicon.svg"
